// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Meta /> should match snapshot with label, icon for Primary variant 1`] = `
<span
  class="root variantPrimary"
>
  <svg
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
    />
  </svg>
  <span
    class="root sizeScale4 withIcon"
  >
    Hello World!
  </span>
</span>
`;

exports[`<Meta /> should match snapshot with label, icon for Secondary variant 1`] = `
<span
  class="root variantSecondary"
>
  <svg
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
    />
  </svg>
  <span
    class="root sizeScale4 withIcon"
  >
    Hello World!
  </span>
</span>
`;

exports[`<Meta /> should render with a JSX node too 1`] = `
<span
  class="root variantPrimary"
>
  <svg
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
    />
  </svg>
  <span
    class="root sizeScale4 withIcon"
  >
    Hello World!
  </span>
</span>
`;
